--- a/CoffeRoaster/coffe_roaster/templates/coffe_roaster_run_roast.html
+++ b/CoffeRoaster/coffe_roaster/templates/coffe_roaster_run_roast.html
@@ -12,6 +12,11 @@
     </div>
 
 {% endblock %}
+{% block stylesheet %}
+{% addtoblock "css" %}
+<link rel="stylesheet" type="text/css" href="{% static "django_arduino_controller/arduino_api_controller.css" %}">
+{% endaddtoblock %}
+{% endblock %}
 {% block javascript%}
     {% addtoblock "jss" %}
         <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.8.0/Chart.bundle.min.js" integrity="sha256-xKeoJ50pzbUGkpQxDYHD7o7hxe0LaOGeguUidbq6vis=" crossorigin="anonymous"></script>
@@ -49,7 +54,6 @@
                         maintainAspectRatio: false
                     },
                 });
-
                 checkinput("{{ profile.data }}");
             });
         </script>
