--- a/TensileTester/tensile_tester/templates/tensile_tester_calibrate.html
+++ b/TensileTester/tensile_tester/templates/tensile_tester_calibrate.html
@@ -3,18 +3,31 @@
 {% load static %}
 {% block contend %}
     {% include "api_controller_sidebar.html" %}
-    {% include "api_programmer.html" %}
+    <div>
+        <ul>
+            <li>1) Insert spring into test device</li>
+            <li>2) Enter the spring rate <input id="spring_rate" type="number" value="0.751" step="0.001" min="0.001"></li>
+            <li>3) Enter the maximum strain <input id="max_strain" type="number" value="50" step="1" min="1"></li>
+        </ul>
+        <button id="runbutton" class="btn btn-primary">run</button>
+    </div>
 {% endblock %}
 {% block javascript%}
     {% addtoblock "jss" %}
         <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.8.0/Chart.bundle.min.js" integrity="sha256-xKeoJ50pzbUGkpQxDYHD7o7hxe0LaOGeguUidbq6vis=" crossorigin="anonymous"></script>
         <script src="{% static 'django_arduino_controller/json_websocket.js' %}"></script>
-        <script type="application/javascript" src="{% static 'django_arduino_controller/arduino_api_controller.js' %}"></script>
     {% endaddtoblock %}
     {% addtoblock "jss" %}
         <script>
-            //arduino_api_controller.hidden=true;
             arduino_api_controller.api_ws_url = "ws://"+window.location.host+"{% url 'django_arduino_controller:api_websocket'%}";
+
+            $('#runbutton').click(function () {
+                let send_data={api: 0,
+                    spring_rate:Number($('#spring_rate').val()),
+                    max_strain:Number($('#max_strain').val()),
+                };
+                arduino_api_controller.api_ws.cmd_message("calibrate", send_data);
+            })
         </script>
     {% endaddtoblock %}
 {% endblock %}
