--- a/TensileTester/tensile_tester/templates/tensile_tester_calibrate.html
+++ b/TensileTester/tensile_tester/templates/tensile_tester_calibrate.html
@@ -4,11 +4,11 @@
 {% block contend %}
     {% include "api_controller_sidebar.html" %}
     <div>
-        <ul>
-            <li>1) Insert spring into test device</li>
-            <li>2) Enter the spring rate <input id="spring_rate" type="number" value="0.751" step="0.001" min="0.001"></li>
-            <li>3) Enter the maximum strain <input id="max_strain" type="number" value="50" step="1" min="1"></li>
-        </ul>
+        <ol>
+            <li>Insert spring into test device</li>
+            <li>Enter the spring rate <input id="spring_rate" type="number" value="0.751" step="0.001" min="0.001"></li>
+            <li> Enter the maximum strain <input id="max_strain" type="number" value="50" step="1" min="1"></li>
+        </ol>
         <button id="runbutton" class="btn btn-primary">run</button>
     </div>
 {% endblock %}
